Fix spacing in menu

--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,6 @@ body {
   padding: 1% 2%;
 }
 
-body {
-  color: var(--background-color);
-}
-
 .App {
   height: 100%;
   display: grid;
@@ -31,7 +27,7 @@ body {
 .App-header {
   grid-area: 1 / 1 / 2 / 2;
   display: grid;
-  grid-template: 1fr / 1fr 4fr 1fr;
+  grid-template: 1fr / 1fr 3fr 1fr;
 }
 
 #Header {
@@ -55,10 +51,16 @@ body {
   grid-area: 1 / 3 / 1 / 4;
 }
 .social-icon {
-  height: 30px !important;
-  width: 30px !important;
-  margin: 2%;
+  height: 35px !important;
+  width: 35px !important;
   float: right;
+  padding: 0;
+}
+
+.Social-icons a:hover {
+  text-decoration: none;
+  text-decoration-color: none;
+  background-color: white;
 }
 
 .Main {
@@ -71,12 +73,13 @@ body {
   grid-area: 1 / 1 / 1 / 2;
   background-color: var(--pink);
   vertical-align: auto;
-  padding: 15% 0%;
+  margin: 2% 0%;
+  padding: 5% 0%;
 }
 
 .Menu h4, a {
   margin: 0% 2%;
-  padding: 2% 5%;
+  padding: 2% 3%;
   line-height: 150%;
   text-decoration: none;
   color: var(--green);
